...
//  Copyright © 2021 YUMEMI Inc. All rights reserved.
//

import SwiftUI

class SeachRepositoryPage {
    static let sortButtonID = "SeachRepositoryView_sortButton"
}

enum OrderType: String, CaseIterable, Identifiable {
    var id: String { rawValue }

    case star = "stars"
...
